comment out update_server, use git for backups